--- a/contact.html
+++ b/contact.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
+    <h1>Contact Us</h1>
     <nav>
         <a href="index.html">Home</a> | 
         <a href="about.html">About</a> | 
         <a href="contact.html">Contact</a>
     </nav>
-    <img src="images/logo.png" alt="Logo" width="200">
-    <p>This is the homepage.</p>
+    <p>Email: contact@example.com</p>
 </body>
 </html>
